[gd_scene load_steps=4 format=3 uid="uid://co4uk16q2prsd"]

[ext_resource type="Texture2D" uid="uid://bpc44qpv04wld" path="res://icon.svg" id="1_jcymt"]
[ext_resource type="Script" path="res://scripts/levels_and_menus/main_scene.gd" id="1_lqo8o"]
[ext_resource type="Script" path="res://scripts/singletons/card_handler.gd" id="3_den1x"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqo8o")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayArea_Player1" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 524.0
offset_right = 480.0
offset_bottom = 854.0
color = Color(0.661629, 0.661629, 0.661629, 1)

[node name="Portrait_Player1" type="TextureRect" parent="PlayArea_Player1"]
layout_mode = 0
offset_left = 2.0
offset_top = 167.0
offset_right = 162.0
offset_bottom = 327.0
texture = ExtResource("1_jcymt")

[node name="PhaseIndicator_Player1" type="Panel" parent="PlayArea_Player1"]
layout_mode = 0
offset_left = 179.0
offset_top = 162.0
offset_right = 462.0
offset_bottom = 326.0

[node name="HScrollBar" type="ScrollContainer" parent="PlayArea_Player1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -157.0
offset_right = 232.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="CardHolder_Player1" type="HBoxContainer" parent="PlayArea_Player1/HScrollBar"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PlayArea_Player2" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 330.0
color = Color(0, 0, 0, 1)

[node name="CardHandler" type="Node2D" parent="."]
script = ExtResource("3_den1x")
